--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<title> Martinac </title>
 </head>
 <body>
+	<t2> Lua, který je méně známý, ale je jednoduchý na ovládání a celkem i dobrý pro začátečníky, kteří chtějí někde s programováním začít. </t2>
 	<a href="https://www.google.com/"target="_blank">Google</a>
 	<a href="kontakty.html">Kontaktujte nás</a>
 </body>
 </html>
+
 
